--- a/index-apex.html
+++ b/index-apex.html
@@ -466,10 +466,6 @@
             font-weight: 500;
         }
 
-        .ranking-bubble .rank-label-only {
-            color: #666666;
-            font-size: 12px;
-        }
 
         /* Nav link - vertically centered */
         .nav-link {
@@ -906,9 +902,11 @@
                     </div>
                     <div class="ranking-bubble avg-bubble">
                         <div class="rank-header">
-                            <span class="rank-label-only">Avg Last 3 Months</span>
+                            <span class="rank-number" style="visibility: hidden;">#0</span>
+                            <span class="rank-label">Avg Last 3 Months</span>
                         </div>
                         <div class="rank-value">${formatCurrency(rankings.last3MonthValue / 3)}</div>
+                        <div class="rank-pct" style="visibility: hidden;">0.00% of portfolio</div>
                     </div>
                 </div>
                 <div class="chart-header">
