--- a/leaderboard.html
+++ b/leaderboard.html
@@ -113,7 +113,7 @@
             border-radius: 16px;
             padding: 24px;
             box-shadow: 0 2px 12px rgba(0, 0, 0, 0.08);
-            max-width: 900px;
+            max-width: 1100px;
             margin: 0 auto;
         }
 
@@ -212,6 +212,7 @@
 
         .domain-cell {
             font-weight: 500;
+            white-space: nowrap;
         }
 
         .domain-cell a {
@@ -375,7 +376,7 @@
             padding: 20px;
             margin-bottom: 16px;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-            max-width: 900px;
+            max-width: 1100px;
             margin-left: auto;
             margin-right: auto;
         }
