Add View Logs link at bottom of dashboard

--- a/index-apex.html
+++ b/index-apex.html
@@ -676,6 +676,10 @@
         </div>
     </div>
 
+    <div style="text-align: center; padding: 24px 0 40px 0;">
+        <a href="/log" style="color: #f97316; text-decoration: none; font-size: 13px; font-weight: 500;">View Logs →</a>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
     <script>
