--- a/index-apex.html
+++ b/index-apex.html
@@ -1150,7 +1150,7 @@
                     <span class="meta-label">Niche:</span>
                     ${nicheLinksHtml}
                 </div>
-                <div class="metrics-summary" id="metricsSummary">
+                <div class="metrics-summary" id="metricsSummary" style="display: ${showMetricsCards ? 'flex' : 'none'}">
                     <div class="metric-card dr-card">
                         <div class="metric-label">DR</div>
                         <div class="dr-circle-container">
@@ -1173,7 +1173,7 @@
                         <div class="metric-change neutral" id="metricTrafficChange">--</div>
                     </div>
                 </div>
-                <div class="metrics-period-selector">
+                <div class="metrics-period-selector" style="display: ${showMetricsCards ? 'flex' : 'none'}">
                     <select id="metricsPeriod">
                         <option value="7">Changes: Last 7 days</option>
                         <option value="30" selected>Changes: Last month</option>
