--- a/log.html
+++ b/log.html
@@ -455,13 +455,14 @@
         function formatDate(isoString) {
             const date = new Date(isoString);
             return date.toLocaleString('en-US', {
+                timeZone: 'Asia/Bangkok',
                 month: 'short',
                 day: 'numeric',
                 year: 'numeric',
                 hour: 'numeric',
                 minute: '2-digit',
                 hour12: true
-            });
+            }) + ' (BKK)';
         }
 
         function formatRelativeTime(isoString) {
