--- a/index-apex.html
+++ b/index-apex.html
@@ -1345,7 +1345,7 @@
                     dashArray: strokeDash
                 },
                 markers: {
-                    size: allSeries.map((s, i) => s.name === 'DR' ? 2 : 0), // Small markers for DR only
+                    size: allSeries.map((s, i) => (s.name === 'DR' || s.name === 'RD') ? 2 : 0), // Small markers for DR and RD
                     hover: { size: 5 },
                     strokeWidth: 0
                 },
@@ -1601,6 +1601,12 @@
             console.log('🔍 CHART CONFIG DEBUG - Y-axis seriesNames:', options.yaxis.map(y => y.seriesName));
             console.log('🔍 CHART CONFIG DEBUG - RD series index:', allSeries.findIndex(s => s.name === 'RD'));
             console.log('🔍 CHART CONFIG DEBUG - RD yaxis index:', options.yaxis.findIndex(y => y.seriesName === 'RD'));
+            console.log('🔍 STROKE DEBUG - strokeWidth:', strokeWidth);
+            console.log('🔍 STROKE DEBUG - strokeCurve:', strokeCurve);
+            console.log('🔍 STROKE DEBUG - strokeDash:', strokeDash);
+            console.log('🔍 STROKE DEBUG - fillOpacity:', fillOpacity);
+            console.log('🔍 MARKER DEBUG - marker sizes:', allSeries.map((s, i) => ({ name: s.name, markerSize: (s.name === 'DR' || s.name === 'RD') ? 2 : 0 })));
+            console.log('🔍 RD SERIES DEBUG - RD data points count:', allSeries.find(s => s.name === 'RD')?.data?.length);
             
             const chart = new ApexCharts(document.querySelector('#apex-chart'), options);
             chart.render();
